testdata/language-features/guard/guard05.reject.out
type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in ./testdata/language-features/guard/guard05.reject.lc:1:9:
value | () = "wrong"
        ^^
------------ trace
!type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in ./testdata/language-features/guard/guard05.reject.lc:1:9:
value | () = "wrong"
        ^^
------------ tooltips
1:9-1:11
    ()
1:14-1:21
    String